--- a/P2/makefile
+++ b/P2/makefile
@@ -3,13 +3,13 @@ all: clean executable valgrind #execute  # Modificadores para el comando make
 # añadir "execute" para que el programa se ejecute tras compilarlo
 
 executable: p2.o lista.o funciones.o # Crea el ejecutable
-	gcc -Wall -o p2 p2.o lista.o listam.o funciones.o funciones1.o
+	gcc -Wall -o p2 p2.o lista.o listam.o funciones.o funciones1.o funciones2.c
 
 p0.o: # Solo crea el archivo de salida de p2.c
 	gcc -c p2.c
 	
 funciones.o:
-	 gcc -c funciones.c funciones1.c
+	 gcc -c funciones.c funciones1.c funciones2.c
 
 lista.o: # """" de lista.c
 	gcc -c lista.c listam.c
