--- a/P3/.vscode/settings.json
+++ b/P3/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "string.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "resource.h": "c"
     }
 }
