--- a/P3/.vscode/settings.json
+++ b/P3/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "string.h": "c",
         "stdlib.h": "c",
-        "resource.h": "c"
+        "resource.h": "c",
+        "unistd.h": "c"
     }
 }
